--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,10 @@ li.active > a {
   display: none;
 }
 
+.navigation-item:hover .submenu {
+  display: block;
+}
+
 .submenu a {
   display: block;
   padding: 8px 20px;
@@ -205,8 +209,18 @@ li.active > a {
   margin-left: 8px;
 }
 
+.user-navigation a {
+  text-decoration: none;
+  }
+
+.search {
+  width: 32px;
+  height: 32px;
+}
+
 .search-form {
   display: none;
+
   position: absolute;
   right: 0;       /*Временно, для построения сетки*/
   padding: 20px 15px;
@@ -217,13 +231,8 @@ li.active > a {
   border-radius: 5px;
 }
 
-.search {
-  width: 32px;
-  height: 32px;
-}
-
-.user-navigation a {
-text-decoration: none;
+.search:hover .search-form {
+  display: block;
 }
 
 .user-navigation input {
@@ -290,12 +299,17 @@ text-decoration: none;
   justify-content: space-between;
   padding: 20px 18px;
   width: 240px;
+  z-index: 1;
 
   background-color: #f8f7f4;
   box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
   border-radius: 5px;
 
   display: none;
+}
+
+.login:hover .login-form {
+  display: flex;
 }
 
 .login-button {
@@ -340,9 +354,9 @@ text-decoration: none;
 
 .modal-basket {
   position: absolute;
-  right: 0;     /*Временно, для построения сетки*/
-  top: 400px;   /*Временно, для построения сетки*/
-
+  right: 0;
+  top: 28px;
+  z-index: 1;
   padding: 20px 15px;
   width: 510px;
 
@@ -353,6 +367,12 @@ text-decoration: none;
   background-color: #f8f7f4;
   box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
   border-radius: 5px;
+
+  display: none;
+}
+
+.basket.active:hover .modal-basket {
+  display: block;
 }
 
 .basket-total {
@@ -776,8 +796,13 @@ a.contacts-info-btn:active {
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
-  width: 186px;
+  margin-top: 36px;
+  /* width: 186px; */
   list-style: none;
+}
+
+.socials li {
+  margin: 0 11px 10px 0;
 }
 
 .social {
@@ -786,7 +811,7 @@ a.contacts-info-btn:active {
   height: 32px;
 
   opacity: 0.8;
-  border: 2px solid rgba(255, 255, 255, 0.5);
+  border: 3px solid rgba(255, 255, 255, 0.5);
   border-radius: 50%;
 }
 
@@ -821,30 +846,55 @@ a.contacts-info-btn:active {
 .useful-info {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-start;
   margin: 0;
   padding: 0;
-  padding-top: 34px;
-  width: 341px;
+  margin-top: 36px;
+  margin-bottom: 30px;
+  width: 353px;
 
   list-style: none;
   font-size: 13px;
   line-height: 18px;
 }
 
+.useful-info li {
+  position: relative;
+  padding-left: 22px;
+  margin-bottom: 3px;
+  min-width: 120px;
+}
+
 .mark {
   font-weight: 700;
 }
 
+.mark::before {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 0;
+  width: 15px;
+  height: 13px;
+
+  background: url(../img/heart.svg) no-repeat;
+}
+
 .copyright {
-  width: 189px;
+  margin: 18px 0 24px;
+  width: 190px;
 
   font-size: 12px;
   line-height: 18px;
 }
 
+.copyright img {
+  display: block;
+  margin-bottom: 5px;
+}
+
 .modal-feedback {
-  display: none;
+  /* display: none; */
   padding: 20px 24px;
   width: 430px;
 
@@ -907,10 +957,20 @@ a.contacts-info-btn:active {
 /*Страница каталога*/
 
 .breadcrumbs {
+  padding: 0;
+  margin: 0;
+  margin-top: -18px;
+  margin-bottom: 5px;
+
   font-size: 14px;
   line-height: 16px;
 
   list-style: none;
+}
+
+.breadcrumbs li {
+  display: inline-block;
+  padding-right: 18px;
 }
 
 .breadcrumbs-link:hover,
@@ -920,16 +980,21 @@ a.contacts-info-btn:active {
 }
 
 .main-title {
+  margin: 0;
+  margin-bottom: 30px;
+
   font-size: 35px;
   line-height: 41px;
   font-weight: 700;
 }
 
-.catalog-filter-group {
-  border: none;
-}
-
 .catalog-filter {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 860px;
+
   font-size: 14px;
   line-height: 16px;
   font-weight: 500;
@@ -944,17 +1009,109 @@ a.contacts-info-btn:active {
   border-radius: 15px;
 }
 
+.catalog-filter-group {
+  margin: 0;
+  margin-bottom: 16px;
+  padding: 0;
+  border: none;
+}
+
+.catalog-filter-title {
+  margin: 0 0 6px 16px;
+}
+
+.catalog-filter-dropdown {
+  padding: 9px 15px;
+
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.range-controls {
+  position: relative;
+  margin-bottom: 16px;
+}
+
+.scale {
+  width: 176px;
+  height: 4px;
+
+  background: rgba(248, 247, 244, 0.5);
+}
+
+.bar {
+  position: absolute;
+  top: 0;
+  left: 16px;
+  width: 106px;
+  height: 4px;
+
+  background: rgba(248, 247, 244, 1);
+}
+
+.range-toggle {
+  position: absolute;
+  top: -8px;
+  width: 4px;
+  height: 4px;
+  background-color: #ababab;
+
+  border: 8px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.range-toggle-min {
+  left: 16px;
+}
+
+.range-toggle-max {
+  left: 123px;
+}
+
+.catalog-filter-list {
+  display: flex;
+  margin: 0;
+  padding: 0 15px;
+
+  list-style: none;
+}
+
 .catalog-filter-label {
   padding-left: 32px;
   cursor: pointer;
 }
 
-.catalog-radio-item {
-  padding: 7px 0;
+.catalog-radio-item,
+.catalog-chekbox-item {
+  position: relative;
+  margin-right: 22px;
+  padding: 9px 0;
 }
 
-.catalog-chekbox-item {
-  padding: 8px 0;
+.catalog-radio-item .catalog-filter-label::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 25px;
+  height: 25px;
+
+  background: url(../img/radio-off.svg) no-repeat;
+  transform: scale(0.88);
+  opacity: 0.8;
+}
+
+.catalog-chekbox-item .catalog-filter-label::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 25px;
+  height: 25px;
+
+  background: url(../img/checkbox-off.svg) no-repeat;
+  opacity: 0.8;
 }
 
 .catalog-filter-btn {
